unpackaged/main/default/objects/Manual_Credit_Memo__c/Manual_Credit_Memo__c.object-meta.xml
<CustomObject>
    <label>Manual Credit Memo</label>
    <nameField>
        <displayFormat>CRM-{00000}</displayFormat>
        <label>Credit Memo Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Credit Memo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>