unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manual Credit Memo</relationshipLabel>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>