unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Accounts_Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Invoice</label>
    <referenceTo>varcpq__Accounts_Payable_Invoice__c</referenceTo>
    <relationshipLabel>Manual Credit Memo</relationshipLabel>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>