unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Applied_Date__c.field-meta.xml
<CustomField>
    <fullName>Applied_Date__c</fullName>
    <inlineHelpText>This is the date that the credit memo was applied in full</inlineHelpText>
    <label>Applied Date</label>
    <type>Date</type>
</CustomField>