unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Bill_Only_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Bill_Only_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Only Indicator</label>
    <type>Checkbox</type>
</CustomField>