unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Bill_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Email__c</fullName>
    <formula>Invoice_Reference__r.varcpq__Billing_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Email</label>
    <type>Text</type>
</CustomField>