unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Name__c</fullName>
    <formula>Invoice_Reference__r.varcpq__Billing_Contact__r.FirstName + &#39; &#39; + Invoice_Reference__r.varcpq__Billing_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Name</label>
    <type>Text</type>
</CustomField>