unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Manual Credit Memo</relationshipLabel>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>