unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo__c</fullName>
    <label>Credit Memo #</label>
    <length>225</length>
    <type>Text</type>
</CustomField>