unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Credit_Memo_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Balance__c</fullName>
    <formula>Grand_Total__c -  Total_Amount_Applied__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Credit Memo Grand Total - Total Amount Applied</inlineHelpText>
    <label>Credit Memo Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>