unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Credit_Memo_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Type__c</fullName>
    <label>Credit Memo Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>