unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>Credit_Amount__c + RMA_Shipping_Refund__c - RMA_Restocking_Fee__c + Taxes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>