unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Invoice_Reference__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Reference</label>
    <referenceTo>varcpq__Invoice__c</referenceTo>
    <relationshipLabel>Manual Credit Memo</relationshipLabel>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>