unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>