unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Original_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>