unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/QBO_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Record_Id__c</fullName>
    <inlineHelpText>This is the Record Id from Quickbooks</inlineHelpText>
    <label>QBO Record Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>