unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/QBO_Synced__c.field-meta.xml
<CustomField>
    <fullName>QBO_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QBO_Synced</label>
    <type>Checkbox</type>
</CustomField>