unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Return_Merchandise_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Return_Merchandise_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RMA</label>
    <referenceTo>Return_Merchandise_Authorization__c</referenceTo>
    <relationshipLabel>Manual Credit Memo</relationshipLabel>
    <relationshipName>Manual_Credit_Memo</relationshipName>
    <type>Lookup</type>
</CustomField>