unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/RMA_Restocking_Fee__c.field-meta.xml
<CustomField>
    <fullName>RMA_Restocking_Fee__c</fullName>
    <label>Restocking Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>