unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/RMA_Shipping_Refund__c.field-meta.xml
<CustomField>
    <fullName>RMA_Shipping_Refund__c</fullName>
    <label>Shipping Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>