unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <inlineHelpText>This stores the Amount of Tax being credited on the Credit Memo</inlineHelpText>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>