unpackaged/main/default/objects/Manual_Credit_Memo__c/fields/Total_Amount_Applied__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Applied__c</fullName>
    <inlineHelpText>This currency field will be a Declarative Lookup Rollup Summary that Sums the total Customer Payments associated to this Credit Memo.</inlineHelpText>
    <label>Total Amount Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>