unpackaged/main/default/objects/Manual_Credit_Memo__c/validationRules/Restocking_and_Shipping_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Restocking_and_Shipping_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>OR(RMA_Shipping_Refund__c &lt; 0, RMA_Restocking_Fee__c &lt; 0)</errorConditionFormula>
    <errorMessage>Please enter positive values</errorMessage>
</ValidationRule>