unpackaged/main/default/objects/Manual_Credit_Memo__c/listViews/All_Credit_Memos.listView-meta.xml
<ListView>
    <fullName>All_Credit_Memos</fullName>
    <columns>NAME</columns>
    <columns>Credit_Memo_Type__c</columns>
    <columns>Return_Merchandise_Authorization__c</columns>
    <columns>Account__c</columns>
    <columns>Accounts_Payable_Invoice__c</columns>
    <columns>Status__c</columns>
    <columns>QBO_Record_Id__c</columns>
    <columns>Grand_Total__c</columns>
    <columns>Total_Amount_Applied__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Credit Memos</label>
</ListView>